# dice-sparse-map

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE-dice-sparse-map  LICENSE-tsl-sparse-map  README.md  conanfile.py  doxygen.conf
.github/: detect-pobr-diff.yml
.github/workflows/: ci.yml  detect-pobr-diff.yml  publish-conan-branch-package.yml  publish-release.yml
cmake/: boilerplate_init.cmake  install_interface_library.cmake  version.hpp.in
include/Dice/sparse-map/: boost_offset_pointer.hpp  sparse_growth_policy.hpp  sparse_hash.hpp  sparse_map.hpp  sparse_set.hpp
include/dice/sparse-map/: boost_offset_pointer.hpp  commons.hpp  sparse_array.hpp  sparse_bucket.hpp  sparse_bucket_array.hpp  sparse_growth_policy.hpp  sparse_hash.hpp  sparse_map.hpp  sparse_props.hpp  sparse_set.hpp  vec.hpp
include/dice/sparse_map/: sparse_growth_policy.hpp  sparse_map.hpp  sparse_props.hpp  sparse_set.hpp
include/dice/sparse_map/internal/: sparse_bucket.hpp  sparse_bucket_array.hpp  sparse_hash.hpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: CMakeLists.txt  custom_allocator_tests.cpp  policy_tests.cpp  popcount_tests.cpp  sparse_map_tests.cpp  sparse_set_tests.cpp  utils.h
tests/fancy_pointer/: CustomAllocator.hpp  sparse_array_tests.cpp  sparse_hash_map_tests.cpp  sparse_hash_set_tests.cpp
tests/scoped_allocator_adaptor/: sparse_array_tests.cpp  sparse_hash_set_tests.cpp
tests/vec/: vec_tests.cpp
